--- a/index.html
+++ b/index.html
@@ -2,21 +2,30 @@
 <html lang="fr">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		rel="stylesheet">
+		rel="stylesheet" />
 
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css" media="all">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
+	<link rel="stylesheet" href="./assets/style.css" media="all" />
 
-	<title>Nina Carducci photographe professionnelle basée à Bordeaux</title>
-	<meta name="description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire.">
+	<meta property="og:title" content="Nina Carducci, photographe professionnelle située à Bordeaux">
+	<meta property="og:locale" content="fr_FR">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://terekdev.github.io/ninacarducci.github.io-main/">
+	<meta property="og:author" content="Nina Carducci">
+	<meta property="og:description" content="Capturer les moments les plus précieux de votre vie. Spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire.">
+	<meta property="og:image" content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/slider/edward-cisneros-mariage.webp">
 
+
+	<title>Nina Carducci photographe professionnelle située à Bordeaux</title>
+	<meta name="description"
+		content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire." />
 </head>
 
 <body>
@@ -29,118 +38,155 @@
 					<li><a href="#gallery">Galerie</a></li>
 					<li><a href="#services">Service</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-							target="_blank"><img src="assets/desktop/autres/instagram.png" alt="Logo instagram"></a></li>
+					<li>
+						<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
+							target="_blank"><img src="assets/desktop/autres/instagram.png" alt="Logo instagram" /></a>
+					</li>
 				</ul>
 			</div>
 		</div>
 		<div id="header">
-
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-indicators">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+						class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+						aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+						aria-label="Slide 3"></button>
 				</div>
 
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img src="./assets/desktop/slider/ryoji-iwata-entreprise.webp" class="d-block w-100"
-							alt="Homme classe traversant un passage piétion">
+							alt="Homme classe traversant un passage piétion" />
 					</div>
 
 					<div class="carousel-item">
 						<img src="./assets/desktop/slider/nicholas-green-concert.webp" class="d-block w-100"
-							alt="Foule dans un concert">
+							alt="Foule dans un concert" />
 					</div>
 
 					<div class="carousel-item">
 						<img src="./assets/desktop/slider/edward-cisneros-mariage.webp" class="d-block w-100"
-							alt="Couple qui danse dans un balet">
+							alt="Couple qui danse dans un balet" />
 					</div>
-
 				</div>
 
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+					data-bs-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="visually-hidden">Previous</span>
 				</button>
 
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+					data-bs-slide="next">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="visually-hidden">Next</span>
 				</button>
-
 			</div>
 		</div>
 	</header>
 
 	<main>
-
-		<div id="about">
+		<article id="about">
 			<div class="picture left">
-				<img src="./assets/desktop/autres/nina.webp" alt="Portrait carré de Nina Carducci, photographe à Bordeaux">
+				<img src="./assets/desktop/autres/nina.webp"
+					alt="Portrait carré de Nina Carducci, photographe à Bordeaux" />
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
-				<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
-					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
-					immortels, voilà ce qui me fait vibrer.</p>
-				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
-					le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
-					yeux, ou le partager au plus grand nombre.
-					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
-					approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du
-					bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+				<p class="about-me__introduction">
+					Devenir photographe était pour moi une évidence. Comme si j’y étais
+					prédestiné. Saisir un moment, une émotion, une situation, un
+					endroit, une lumière et les rendre immortels, voilà ce qui me fait
+					vibrer.
+				</p>
+				<p>
+					Nous passons notre vie à chercher le bonheur, et lorsque nous y
+					touchons, nous n’avons qu’une envie : le figer au travers de
+					photographies pour le savourer avec les personnes qui sont
+					importantes à nos yeux, ou le partager au plus grand nombre. C’est
+					ce que je vous propose : saisir ces merveilleux moments au travers
+					de mon regard, mon approche, ma technique. Rendre ces moments
+					immortels, afin que vous puissiez y puiser de l’amour, du bonheur,
+					de la tendresse et de lumière à chaque fois que vous poserez les
+					yeux sur vos photos.
+				</p>
 			</div>
-		</div>
-		<div id="gallery">
+		</article>
+		<section id="gallery">
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/desktop/gallery/concerts/aaron-paul-concert.webp"  alt="Salle de concert"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/desktop/gallery/entreprises/ali-morshedlou-entrepreneur.webp" alt="Portrait d'un homme en costume"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/desktop/gallery/entreprises/jason-goodman-entreprise.webp" alt="Femme qui rit dans un openspace"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/desktop/gallery/mariages/hannah-busing-mariage.webp" alt="Zoom sur des mains qui se tiennent" />
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/desktop/gallery/portraits/ade-tunji-portrait.webp" alt="Homme mouillé fermant les yeux au soleil"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/desktop/gallery/mariages/jakob-owens-mariage.webp" alt="Couple de marié heureux"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/desktop/gallery/portraits/nino-van-prattenburg-photo-portrait.webp" alt="Portrait d'une femme derrière un grillage"/>
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/desktop/gallery/concerts/austin-neill-spectacle.webp" alt="Homme qui chante à un concert"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/desktop/gallery/entreprises/mateus-campos-felipe-startup.webp" alt="Femme souriant dans un bureau"/>
+					<img data-gallery-tag="Concert" class="gallery-item"
+						src="./assets/desktop/gallery/concerts/aaron-paul-concert.webp" alt="Salle de concert" />
+					<img data-gallery-tag="Entreprises" class="gallery-item"
+						src="./assets/desktop/gallery/entreprises/ali-morshedlou-entrepreneur.webp"
+						alt="Portrait d'un homme en costume" />
+					<img data-gallery-tag="Entreprises" class="gallery-item"
+						src="./assets/desktop/gallery/entreprises/jason-goodman-entreprise.webp"
+						alt="Femme qui rit dans un openspace" />
+					<img data-gallery-tag="Mariages" class="gallery-item"
+						src="./assets/desktop/gallery/mariages/hannah-busing-mariage.webp"
+						alt="Zoom sur des mains qui se tiennent" />
+					<img data-gallery-tag="Portrait" class="gallery-item"
+						src="./assets/desktop/gallery/portraits/ade-tunji-portrait.webp"
+						alt="Homme mouillé fermant les yeux au soleil" />
+					<img data-gallery-tag="Mariages" class="gallery-item"
+						src="./assets/desktop/gallery/mariages/jakob-owens-mariage.webp"
+						alt="Couple de marié heureux" />
+					<img data-gallery-tag="Portrait" class="gallery-item"
+						src="./assets/desktop/gallery/portraits/nino-van-prattenburg-photo-portrait.webp"
+						alt="Portrait d'une femme derrière un grillage" />
+					<img data-gallery-tag="Concert" class="gallery-item"
+						src="./assets/desktop/gallery/concerts/austin-neill-spectacle.webp"
+						alt="Homme qui chante à un concert" />
+					<img data-gallery-tag="Entreprises" class="gallery-item"
+						src="./assets/desktop/gallery/entreprises/mateus-campos-felipe-startup.webp"
+						alt="Femme souriant dans un bureau" />
 				</div>
 			</div>
 			<div class="quote">
 				<figure>
 					<blockquote>
-						<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
-							fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
-							n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
-							vérité.</p>
+						<p class="quote__text">
+							Un portrait n’est pas une ressemblance. Dès lors qu’une émotion
+							ou qu’un fait est traduit en photo, il cesse d’être un fait pour
+							devenir une opinion. L’inexactitude n’existe pas en
+							photographie. Toutes les photos sont exactes. Aucune d’elles
+							n’est la vérité.
+						</p>
 					</blockquote>
 					<figcaption class="quote__author">- Richard Avedon</figcaption>
 				</figure>
 			</div>
-		</div>
-		<div id="services">
+		</section>
+		<section id="services">
 			<h2 class="title">Mes services</h2>
 			<div class="container">
 				<div class="service">
 					<div class="service__description">
 						<h3>Shooting photo</h3>
-						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
-							en Île-de-France pour réaliser vos photos</p>
+						<p>
+							Pour capturer vos moments les plus précieux et garder un
+							souvenir impérissable. Je me déplace en Île-de-France pour
+							réaliser vos photos
+						</p>
 					</div>
 					<div class="service__price">
 						<h4>350€/demi journée</h4>
 						<span>Matériel, déplacement inclus</span>
 					</div>
-
 				</div>
 				<div class="service">
 					<div class="service__description">
 						<h3>Retouches</h3>
-						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
-							optimal pour vos publications</p>
+						<p>
+							Vous souhaitez retoucher vos photos pour un résultat
+							professionnel ? Bénéficier d’un rendu optimal pour vos
+							publications
+						</p>
 					</div>
 					<div class="service__price">
 						<h4>50€/photo</h4>
@@ -150,8 +196,10 @@
 				<div class="service">
 					<div class="service__description">
 						<h3>Album photos</h3>
-						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers
-							un album photo personnalisé</p>
+						<p>
+							Partagez avec vos proches et vos clients les photos des moments
+							partagés ensemble à travers un album photo personnalisé
+						</p>
 					</div>
 					<div class="service__price">
 						<h4>400€ album A4</h4>
@@ -159,12 +207,15 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<div class="quote">
 			<figure>
 				<blockquote>
-					<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
-						traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
+					<p class="quote__text">
+						De manière inconsciente, je crois, je guette un regard, une
+						expression, des traits ou une nostalgie capable de résumer ou plus
+						exactement de révéler une vie
+					</p>
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
@@ -175,19 +226,22 @@
 			<div class="container">
 				<section class="form-container">
 					<h2>Une question ? Une demande de devis ?</h2>
-					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+					<p>
+						N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24
+						heures
+					</p>
 					<form action="" method="post">
 						<label>Nom</label>
-						<input type="text" name="nom" id="nom">
+						<input type="text" name="nom" id="nom" />
 						<label>Email</label>
-						<input type="email" name="email" id="email">
+						<input type="email" name="email" id="email" />
 						<label>Message</label>
 						<textarea name="message" id="message" cols="30" rows="10"></textarea>
 						<input type="submit" value="Envoyer" />
 					</form>
 				</section>
 				<div class="picture right">
-					<img src="./assets/desktop/autres/camera.webp" alt="Appareil photo">
+					<img src="./assets/desktop/autres/camera.webp" alt="Appareil photo" />
 				</div>
 			</div>
 		</div>
