--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:url" content="https://terekdev.github.io/ninacarducci.github.io-main/">
 	<meta property="og:author" content="Nina Carducci">
 	<meta property="og:description" content="Capturer les moments les plus précieux de votre vie. Spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire.">
-	<meta name="image" property="og:image" content="[https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/slider/edward-cisneros-mariage.webp]">
+	<meta property="og:image" content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/slider/edward-cisneros-mariage.webp">
 
 
 	<title>Nina Carducci photographe professionnelle située à Bordeaux</title>
