--- a/index.html
+++ b/index.html
@@ -14,13 +14,23 @@
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
 	<link rel="stylesheet" href="./assets/style.css" media="all" />
 
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@nina_carducci">
+	<meta name="twitter:title" content="Nina Carducci | Photographe professionnel">
+	<meta name="twitter:description" 
+	content="Portfolio de Nina Carducci. Photographe professionnel sur Bordeaux, 
+	passionnée par son métier. Capture vos vies à l'occasion de concert, mariage ou événement d'entreprise ou encore vos portraits.">
+	<meta name="twitter:creator" content="@nina_carducci">
+	<meta name="twitter:image" content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/autres/nina.webp">
+	<meta name="twitter:image:alt" content="Photo de Nina Carducci">
+
 	<meta property="og:title" content="Nina Carducci, photographe professionnelle située à Bordeaux">
 	<meta property="og:locale" content="fr_FR">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://terekdev.github.io/ninacarducci.github.io-main/">
 	<meta property="og:author" content="Nina Carducci">
 	<meta property="og:description" content="Capturer les moments les plus précieux de votre vie. Spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire.">
-	<meta property="og:image" content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/slider/edward-cisneros-mariage.webp">
+	<meta property="og:image" content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/slider/nicholas-green-concert.webp">
 
 
 	<title>Nina Carducci photographe professionnelle située à Bordeaux</title>
