--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@nina_carducci">
 	<meta name="twitter:title" content="Nina Carducci | Photographe professionnel">
-	<meta name="twitter:description" 
-	content="Portfolio de Nina Carducci. Photographe professionnel sur Bordeaux, 
+	<meta name="twitter:description"
+		content="Portfolio de Nina Carducci. Photographe professionnel sur Bordeaux, 
 	passionnée par son métier. Capture vos vies à l'occasion de concert, mariage ou événement d'entreprise ou encore vos portraits.">
 	<meta name="twitter:creator" content="@nina_carducci">
-	<meta name="twitter:image" content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/autres/nina.webp">
+	<meta name="twitter:image:src"
+		content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/autres/nina.webp">
 	<meta name="twitter:image:alt" content="Photo de Nina Carducci">
 
 	<meta property="og:title" content="Nina Carducci, photographe professionnelle située à Bordeaux">
@@ -29,13 +30,51 @@
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://terekdev.github.io/ninacarducci.github.io-main/">
 	<meta property="og:author" content="Nina Carducci">
-	<meta property="og:description" content="Capturer les moments les plus précieux de votre vie. Spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire.">
-	<meta property="og:image" content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/slider/nicholas-green-concert.webp">
+	<meta property="og:description"
+		content="Capturer les moments les plus précieux de votre vie. Spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire.">
+	<meta property="og:image"
+		content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/slider/nicholas-green-concert.webp">
 
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "Nina Carducci Photographe",
+		  "image": "https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/autres/nina.webp",
+		  "@id": "https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/autres/nina.webp",
+		  "url": "https://terekdev.github.io/ninacarducci.github.io-main",
+		  "telephone": "05 56 67 78 89",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "FR"
+		  },
+		  "geo": {
+			"@type": "GeoCoordinates",
+			"latitude": 44.8465743,
+			"longitude": -0.6065364999999999
+		  },
+		  "openingHoursSpecification": {
+			"@type": "OpeningHoursSpecification",
+			"dayOfWeek": [
+			  "Monday",
+			  "Tuesday",
+			  "Wednesday",
+			  "Thursday",
+			  "Friday"
+			],
+			"opens": "10:00",
+			"closes": "19:00"
+		  } 
+		}
+		</script>
+
+	<link rel="canonnial" href="https://terekdev.github.io/ninacarducci.github.io-main/">
 
 	<title>Nina Carducci photographe professionnelle située à Bordeaux</title>
-	<meta name="description"
-		content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire." />
+	<meta name="description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire." />
 </head>
 
 <body>
