--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet" />
 
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
-	<link rel="stylesheet" href="./assets/style.css" media="all" />
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+	<link rel="stylesheet" href="./assets/style.min.css" media="all" />
 
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@nina_carducci">
