--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	passionnée par son métier. Capture vos vies à l'occasion de concert, mariage ou événement d'entreprise ou encore vos portraits.">
 	<meta name="twitter:creator" content="@nina_carducci">
 	<meta name="twitter:image:src"
-		content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/autres/nina.webp">
+		content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/nina.webp">
 	<meta name="twitter:image:alt" content="Photo de Nina Carducci">
 
 	<meta property="og:title" content="Nina Carducci, photographe professionnelle située à Bordeaux">
@@ -89,7 +89,7 @@
 					<li><a href="#contact">Contact</a></li>
 					<li>
 						<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-							target="_blank"><img src="assets/desktop/autres/instagram.png" alt="Logo instagram" /></a>
+							target="_blank"><img src="assets/desktop/instagram.png" width="20" height="20" style="max-width: 100%; height: auto;"alt="Logo instagram" /></a>
 					</li>
 				</ul>
 			</div>
@@ -160,7 +160,7 @@
 	<main>
 		<article id="about">
 			<div class="picture left">
-				<img src="./assets/desktop/autres/nina.webp"
+				<img src="./assets/desktop/nina.webp" width="560" height="558" style="max-width: 100%; height: auto;" alt="Portrait de Nina Carducci, photographe à Bordeaux"
 					alt="Portrait carré de Nina Carducci, photographe à Bordeaux" />
 			</div>
 			<div id="about-me">
@@ -310,7 +310,7 @@
 					</form>
 				</section>
 				<div class="picture right">
-					<img src="./assets/desktop/autres/camera.webp" alt="Appareil photo" />
+					<img src="./assets/desktop/camera.webp" width="419" height="418" style="max-width: 100%; height: auto;" alt="Appareil photo" />
 				</div>
 			</div>
 		</div>
