--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<li><a href="#contact">Contact</a></li>
 					<li>
 						<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-							target="_blank"><img src="assets/desktop/instagram.png" width="20" height="20" style="max-width: 100%; height: auto;"alt="Logo instagram" /></a>
+							target="_blank"><img src="assets/desktop/instagram.png" alt="Logo instagram" /></a>
 					</li>
 				</ul>
 			</div>
@@ -160,7 +160,7 @@
 	<main>
 		<article id="about">
 			<div class="picture left">
-				<img src="./assets/desktop/nina.webp" width="560" height="558" style="max-width: 100%; height: auto;" alt="Portrait de Nina Carducci, photographe à Bordeaux"
+				<img src="./assets/desktop/nina.webp"
 					alt="Portrait carré de Nina Carducci, photographe à Bordeaux" />
 			</div>
 			<div id="about-me">
@@ -310,7 +310,7 @@
 					</form>
 				</section>
 				<div class="picture right">
-					<img src="./assets/desktop/camera.webp" width="419" height="418" style="max-width: 100%; height: auto;" alt="Appareil photo" />
+					<img src="./assets/desktop/camera.webp" alt="Appareil photo" />
 				</div>
 			</div>
 		</div>
