--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet" />
 
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
 	<link rel="stylesheet" href="./assets/style.min.css" media="all" />
 
 	<meta name="twitter:card" content="summary">
@@ -300,11 +300,11 @@
 						heures
 					</p>
 					<form action="" method="post">
-						<label>Nom</label>
+						<label for="nom">Nom</label>
 						<input type="text" name="nom" id="nom" />
-						<label>Email</label>
+						<label for="email">Email</label>
 						<input type="email" name="email" id="email" />
-						<label>Message</label>
+						<label for="message">Message</label>
 						<textarea name="message" id="message" cols="30" rows="10"></textarea>
 						<input type="submit" value="Envoyer" />
 					</form>
