--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link
-		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		rel="stylesheet" />
-
+	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"rel="stylesheet" />
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
 	<link rel="stylesheet" href="./assets/style.min.css" media="all" />
 
@@ -83,7 +80,7 @@
 			<h1 class="name">Nina Carducci</h1>
 			<div class="nav">
 				<ul>
-					
+
 					<li><a href="#about">À propos</a></li>
 					<li><a href="#gallery">Galerie</a></li>
 					<li><a href="#services">Service</a></li>
@@ -316,7 +313,6 @@
 			</div>
 		</div>
 	</footer>
-	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.min.js"></script>
