--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"rel="stylesheet" />
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
 	<link rel="stylesheet" href="./assets/style.min.css" media="all" />
 
 	<meta name="twitter:card" content="summary">
