Fin du Projet 9

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	passionnée par son métier. Capture vos vies à l'occasion de concert, mariage ou événement d'entreprise ou encore vos portraits.">
 	<meta name="twitter:creator" content="@nina_carducci">
 	<meta name="twitter:image:src"
-		content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/nina.webp">
+		content="https://terekdev.github.io/Portfolio_Nina_Carducci/assets/desktop/nina.webp">
 	<meta name="twitter:image:alt" content="Photo de Nina Carducci">
 
 	<meta property="og:title" content="Nina Carducci, photographe professionnelle située à Bordeaux">
@@ -30,7 +30,7 @@
 	<meta property="og:description"
 		content="Capturer les moments les plus précieux de votre vie. Spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire.">
 	<meta property="og:image"
-		content="https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/slider/nicholas-green-concert.webp">
+		content="https://terekdev.github.io/Portfolio_Nina_Carducci/desktop/slider/nicholas-green-concert.webp">
 
 	<script type="application/ld+json">
 		{
