--- a/index.html
+++ b/index.html
@@ -315,8 +315,9 @@
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.min.js"></script>
-	<script src="./assets/script.min.js"></script>
+		<script src="./assets/maugallery.min.js"></script>
+		<script src="./assets/script.min.js"></script>
+		<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 </body>
 
 </html>
