--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	passionnée par son métier. Capture vos vies à l'occasion de concert, mariage ou événement d'entreprise ou encore vos portraits.">
 	<meta name="twitter:creator" content="@nina_carducci">
 	<meta name="twitter:image:src"
-		content="https://terekdev.github.io/Portfolio_Nina_Carducci/assets/desktop/nina.webp">
+		content="https://terekdev.github.io/Portfolio_Nina_Carducci/assets/images/nina.webp">
 	<meta name="twitter:image:alt" content="Photo de Nina Carducci">
 
 	<meta property="og:title" content="Nina Carducci, photographe professionnelle située à Bordeaux">
@@ -30,15 +30,15 @@
 	<meta property="og:description"
 		content="Capturer les moments les plus précieux de votre vie. Spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire.">
 	<meta property="og:image"
-		content="https://terekdev.github.io/Portfolio_Nina_Carducci/desktop/slider/nicholas-green-concert.webp">
+		content="https://terekdev.github.io/Portfolio_Nina_Carducci/images/slider/nicholas-green-concert.webp">
 
 	<script type="application/ld+json">
 		{
 		  "@context": "https://schema.org",
 		  "@type": "LocalBusiness",
 		  "name": "Nina Carducci Photographe",
-		  "image": "https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/autres/nina.webp",
-		  "@id": "https://terekdev.github.io/ninacarducci.github.io-main/assets/desktop/autres/nina.webp",
+		  "image": "https://terekdev.github.io/ninacarducci.github.io-main/assets/images/autres/nina.webp",
+		  "@id": "https://terekdev.github.io/ninacarducci.github.io-main/assets/images/autres/nina.webp",
 		  "url": "https://terekdev.github.io/ninacarducci.github.io-main",
 		  "telephone": "05 56 67 78 89",
 		  "address": {
@@ -87,7 +87,7 @@
 					<li><a href="#contact">Contact</a></li>
 					<li>
 						<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-							target="_blank"><img src="assets/desktop/instagram.png" width="20" height="20" style="max-width: 100%; height: auto;"  alt="Logo instagram" /></a>
+							target="_blank"><img src="assets/images/instagram.png" width="20" height="20" style="max-width: 100%; height: auto;"  alt="Logo instagram" /></a>
 					</li>
 				</ul>
 			</div>
@@ -105,36 +105,36 @@
 
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/desktop/slider/1024/ryoji-iwata-entreprise.1024.webp" class="d-block w-100"
+						<img src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp" class="d-block w-100"
 							alt="Homme classe traversant un passage piétion"
 							class="d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
-							srcset="./assets/desktop/slider/375/ryoji-iwata-entreprise.375.webp 375w,
-								./assets/desktop/slider/768/ryoji-iwata-entreprise.768.webp 768w,
-								./assets/desktop/slider/1024/ryoji-iwata-entreprise.1024.webp 1024w,
-								./assets/desktop/slider/1440/ryoji-iwata-entreprise.1440.webp 1440w,
-								./assets/desktop/slider/1920/ryoji-iwata-entreprise.1920.webp 1920w" sizes="100vw">
+							srcset="./assets/images/slider/375/ryoji-iwata-entreprise.375.webp 375w,
+								./assets/images/slider/768/ryoji-iwata-entreprise.768.webp 768w,
+								./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp 1024w,
+								./assets/images/slider/1440/ryoji-iwata-entreprise.1440.webp 1440w,
+								./assets/images/slider/1920/ryoji-iwata-entreprise.1920.webp 1920w" sizes="100vw">
 					</div>
 
 					<div class="carousel-item">
-						<img src="./assets/desktop/slider/1024/nicholas-green-concert.1024.webp" class="d-block w-100"
+						<img src="./assets/images/slider/1024/nicholas-green-concert.1024.webp" class="d-block w-100"
 							alt="Foule dans un concert"
 							class="d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
-							srcset="./assets/desktop/slider/375/nicholas-green-concert.375.webp 375w,
-								./assets/desktop/slider/768/nicholas-green-concert.768.webp 768w,
-								./assets/desktop/slider/1024/nicholas-green-concert.1024.webp 1024w,
-								./assets/desktop/slider/1440/nicholas-green-concert.1440.webp 1440w,
-								./assets/desktop/slider/1920/nicholas-green-concert.1920.webp 1920w" sizes="100vw">
+							srcset="./assets/images/slider/375/nicholas-green-concert.375.webp 375w,
+								./assets/images/slider/768/nicholas-green-concert.768.webp 768w,
+								./assets/images/slider/1024/nicholas-green-concert.1024.webp 1024w,
+								./assets/images/slider/1440/nicholas-green-concert.1440.webp 1440w,
+								./assets/images/slider/1920/nicholas-green-concert.1920.webp 1920w" sizes="100vw">
 					</div>
 
 					<div class="carousel-item">
-						<img src="./assets/desktop/slider/1024/edward-cisneros-mariage.1024.webp" class="d-block w-100"
+						<img src="./assets/images/slider/1024/edward-cisneros-mariage.1024.webp" class="d-block w-100"
 							alt="Couple qui danse dans un balet"
 							class="d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
-							srcset="./assets/desktop/slider/375/edward-cisneros-mariage.375.webp 375w,
-								./assets/desktop/slider/768/edward-cisneros-mariage.768.webp 768w,
-								./assets/desktop/slider/1024/edward-cisneros-mariage.1024.webp 1024w,
-								./assets/desktop/slider/1440/edward-cisneros-mariage.1440.webp 1440w,
-								./assets/desktop/slider/1920/edward-cisneros-mariage.1920.webp 1920w" sizes="100vw">
+							srcset="./assets/images/slider/375/edward-cisneros-mariage.375.webp 375w,
+								./assets/images/slider/768/edward-cisneros-mariage.768.webp 768w,
+								./assets/images/slider/1024/edward-cisneros-mariage.1024.webp 1024w,
+								./assets/images/slider/1440/edward-cisneros-mariage.1440.webp 1440w,
+								./assets/images/slider/1920/edward-cisneros-mariage.1920.webp 1920w" sizes="100vw">
 
 
 					</div>
@@ -158,7 +158,7 @@
 	<main>
 		<article id="about">
 			<div class="picture left">
-				<img src="./assets/desktop/nina.webp" width="555" height="553" style="max-width: 100%; height: auto;"
+				<img src="./assets/images/nina.webp" width="555" height="553" style="max-width: 100%; height: auto;"
 					alt="Portrait carré de Nina Carducci, photographe à Bordeaux" />
 			</div>
 			<div id="about-me">
@@ -187,30 +187,30 @@
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/desktop/gallery/concerts/aaron-paul-concert.webp" alt="Salle de concert" />
+						src="./assets/images/gallery/concerts/aaron-paul-concert.webp" alt="Salle de concert" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/desktop/gallery/entreprise/ali-morshedlou-entrepreneur.webp"
+						src="./assets/images/gallery/entreprise/ali-morshedlou-entrepreneur.webp"
 						alt="Portrait d'un homme en costume" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/desktop/gallery/entreprise/jason-goodman-entreprise.webp"
+						src="./assets/images/gallery/entreprise/jason-goodman-entreprise.webp"
 						alt="Femme qui rit dans un openspace" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/desktop/gallery/mariage/hannah-busing-mariage.webp"
+						src="./assets/images/gallery/mariage/hannah-busing-mariage.webp"
 						alt="Zoom sur des mains qui se tiennent" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/desktop/gallery/portraits/ade-tunji-portrait.webp"
+						src="./assets/images/gallery/portraits/ade-tunji-portrait.webp"
 						alt="Homme mouillé fermant les yeux au soleil" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/desktop/gallery/mariage/jakob-owens-mariage.webp"
+						src="./assets/images/gallery/mariage/jakob-owens-mariage.webp"
 						alt="Couple de marié heureux" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/desktop/gallery/portraits/nino-van-prattenburg-photo-portrait.webp"
+						src="./assets/images/gallery/portraits/nino-van-prattenburg-photo-portrait.webp"
 						alt="Portrait d'une femme derrière un grillage" />
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/desktop/gallery/concerts/austin-neill-spectacle.webp"
+						src="./assets/images/gallery/concerts/austin-neill-spectacle.webp"
 						alt="Homme qui chante à un concert" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/desktop/gallery/entreprise/mateus-campos-felipe-startup.webp"
+						src="./assets/images/gallery/entreprise/mateus-campos-felipe-startup.webp"
 						alt="Femme souriant dans un bureau" />
 				</div>
 			</div>
@@ -308,7 +308,7 @@
 					</form>
 				</section>
 				<div class="picture right">
-					<img src="./assets/desktop/camera.webp" width="419" height="418" style="max-width: 100%; height: auto;" alt="Appareil photo" />
+					<img src="./assets/images/camera.webp" width="419" height="418" style="max-width: 100%; height: auto;" alt="Appareil photo" />
 				</div>
 			</div>
 		</div>
