--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"rel="stylesheet" />
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
+	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet" />
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
 	<link rel="stylesheet" href="./assets/style.min.css" media="all" />
 
 	<meta name="twitter:card" content="summary">
@@ -107,7 +107,7 @@
 					<div class="carousel-item active">
 						<img src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp" class="d-block w-100"
 							alt="Homme classe traversant un passage piétion"
-							class="d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
+							class="d-block" width="1920" height="888" style="max-width: 100%; height: auto;" 
 							srcset="./assets/images/slider/375/ryoji-iwata-entreprise.375.webp 375w,
 								./assets/images/slider/768/ryoji-iwata-entreprise.768.webp 768w,
 								./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp 1024w,
@@ -118,7 +118,7 @@
 					<div class="carousel-item">
 						<img src="./assets/images/slider/1024/nicholas-green-concert.1024.webp" class="d-block w-100"
 							alt="Foule dans un concert"
-							class="d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
+							class="dw-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
 							srcset="./assets/images/slider/375/nicholas-green-concert.375.webp 375w,
 								./assets/images/slider/768/nicholas-green-concert.768.webp 768w,
 								./assets/images/slider/1024/nicholas-green-concert.1024.webp 1024w,
@@ -129,7 +129,7 @@
 					<div class="carousel-item">
 						<img src="./assets/images/slider/1024/edward-cisneros-mariage.1024.webp" class="d-block w-100"
 							alt="Couple qui danse dans un balet"
-							class="d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
+							class="w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
 							srcset="./assets/images/slider/375/edward-cisneros-mariage.375.webp 375w,
 								./assets/images/slider/768/edward-cisneros-mariage.768.webp 768w,
 								./assets/images/slider/1024/edward-cisneros-mariage.1024.webp 1024w,
@@ -297,7 +297,7 @@
 						N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24
 						heures
 					</p>
-					<form action="" method="post">
+					<form method="post">
 						<label for="nom">Nom</label>
 						<input type="text" name="nom" id="nom" />
 						<label for="email">Email</label>
