--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp" class="d-block w-100"
+						<img fetchpriority="low" src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp" class="d-block w-100"
 							alt="Homme classe traversant un passage piétion"
 							class = "d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
 							srcset="./assets/images/slider/375/ryoji-iwata-entreprise.375.webp 375w,
@@ -116,7 +116,7 @@
 					</div>
 
 					<div class="carousel-item">
-						<img src="./assets/images/slider/1024/nicholas-green-concert.1024.webp" class="d-block w-100"
+						<img fetchpriority="low" src="./assets/images/slider/1024/nicholas-green-concert.1024.webp" class="d-block w-100"
 							alt="Foule dans un concert"
 							class = "d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
 							srcset="./assets/images/slider/375/nicholas-green-concert.375.webp 375w,
@@ -127,7 +127,7 @@
 					</div>
 
 					<div class="carousel-item">
-						<img src= "./assets/images/slider/1024/edward-cisneros-mariage.1024.webp" class="d-block w-100"
+						<img fetchpriority="low" src= "./assets/images/slider/1024/edward-cisneros-mariage.1024.webp" class="d-block w-100"
 							alt="Couple qui danse dans un balet"
 							class = "d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" 
 							srcset="./assets/images/slider/375/edward-cisneros-mariage.375.webp 375w,
