--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta name="twitter:title" content="Nina Carducci | Photographe professionnel">
 	<meta name="twitter:description"
 		content="Portfolio de Nina Carducci. Photographe professionnel sur Bordeaux, 
-	passionnée par son métier. Capture vos vies à l'occasion de concert, mariage ou événement d'entreprise ou encore vos portraits.">
+	Réalisez vos Shootings, Retouches et Albums photos avec Nina Carducci. Découvrez ici son portfolio : spectacles, mariages, portraits, entrepreneuriat…">
 	<meta name="twitter:creator" content="@nina_carducci">
 	<meta name="twitter:image:src"
 		content="https://terekdev.github.io/Portfolio_Nina_Carducci/assets/images/nina.webp">
@@ -105,23 +105,54 @@
 
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img fetchpriority="low" src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp" class="d-block w-100"
-							alt="Homme classe traversant un passage piétion"
-							class = "d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" >
+						<picture>
+							<source srcset="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp" media="(max-width: 1024px)" />
+							<source srcset="./assets/images/slider/375/ryoji-iwata-entreprise.375.webp" media="(max-width: 375px)" />
+							<source srcset="./assets/images/slider/768/ryoji-iwata-entreprise.768.webp" media="(max-width: 768px)" />
+							<source srcset="./assets/images/slider/1440/ryoji-iwata-entreprise.1440.webp" media="(max-width: 1440px)" />
+							<source srcset="./assets/images/slider/1920/ryoji-iwata-entreprise.1920.webp" media="(max-width: 1920px)" />
+							<img
+							  src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp"
+							  alt="Bannière (photographie de concert)"
+							  class="d-block w-100"
+							  width="1920"
+							  height="1080"
+							/>
+						  </picture>
 					</div>
 
 					<div class="carousel-item">
-						<img fetchpriority="low" src="./assets/images/slider/1024/nicholas-green-concert.1024.webp" class="d-block w-100"
-							alt="Foule dans un concert"
-							class = "d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" >
+						<picture>
+							<source srcset="./assets/images/slider/1024/nicholas-green-concert.1024.webp" media="(max-width: 1024px)" />
+							<source srcset="./assets/images/slider/375/nicholas-green-concert.375.webp" media="(max-width: 375px)" />
+							<source srcset="./assets/images/slider/768/nicholas-green-concert.768.webp" media="(max-width: 768px)" />
+							<source srcset="./assets/images/slider/1440/nicholas-green-concert.1440.webp" media="(max-width: 1440px)" />
+							<source srcset="./assets/images/slider/1920/nicholas-green-concert.1920.webp" media="(max-width: 1920px)" />
+							<img
+							  src="./assets/images/slider/1024/nicholas-green-concert.1024.webp"
+							  alt="Bannière (photographie de concert)"
+							  class="d-block w-100"
+							  width="1920"
+							  height="1080"
+							/>
+						  </picture>
 					</div>
 
 					<div class="carousel-item">
-						<img fetchpriority="low" src= "./assets/images/slider/1024/edward-cisneros-mariage.1024.webp" class="d-block w-100"
-							alt="Couple qui danse dans un balet"
-							class = "d-block w-100" width="1920" height="888" style="max-width: 100%; height: auto;" >
-
-
+						<picture>
+							<source srcset="./assets/images/slider/1024/edward-cisneros-mariage.1024.webp" media="(max-width: 1024px)" />
+							<source srcset="./assets/images/slider/375/edward-cisneros-mariage.375.webp" media="(max-width: 375px)" />
+							<source srcset="./assets/images/slider/768/edward-cisneros-mariage.768.webp" media="(max-width: 768px)" />
+							<source srcset="./assets/images/slider/1440/edward-cisneros-mariage.1440.webp" media="(max-width: 1440px)" />
+							<source srcset="./assets/images/slider/1920/edward-cisneros-mariage.1920.webp" media="(max-width: 1920px)" />
+							<img
+							  src="./assets/images/slider/1024/edward-cisneros-mariage.1024.webp"
+							  alt="Bannière (photographie de concert)"
+							  class="d-block w-100"
+							  width="1920"
+							  height="1080"
+							/>
+						  </picture>
 					</div>
 				</div>
 
