--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 							<source srcset="./assets/images/slider/1440/ryoji-iwata-entreprise.1440.webp" media="(max-width: 1440px)" />
 							<source srcset="./assets/images/slider/1920/ryoji-iwata-entreprise.1920.webp" media="(max-width: 1920px)" />
 							<img
+								fetchpriority="low"
 							  src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp"
 							  alt="Bannière (photographie de concert)"
 							  class="d-block w-100"
@@ -130,6 +131,7 @@
 							<source srcset="./assets/images/slider/1440/nicholas-green-concert.1440.webp" media="(max-width: 1440px)" />
 							<source srcset="./assets/images/slider/1920/nicholas-green-concert.1920.webp" media="(max-width: 1920px)" />
 							<img
+								fetchpriority="low"
 							  src="./assets/images/slider/1024/nicholas-green-concert.1024.webp"
 							  alt="Bannière (photographie de concert)"
 							  class="d-block w-100"
@@ -147,6 +149,7 @@
 							<source srcset="./assets/images/slider/1440/edward-cisneros-mariage.1440.webp" media="(max-width: 1440px)" />
 							<source srcset="./assets/images/slider/1920/edward-cisneros-mariage.1920.webp" media="(max-width: 1920px)" />
 							<img
+								fetchpriority="low"
 							  src="./assets/images/slider/1024/edward-cisneros-mariage.1024.webp"
 							  alt="Bannière (photographie de concert)"
 							  class="d-block w-100"
