--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 							  class="d-block w-100"
 							  width="1920"
 							  height="1080"
+							  loading="lazy"
 							/>
 						  </picture>
 					</div>
@@ -137,6 +138,7 @@
 							  class="d-block w-100"
 							  width="1920"
 							  height="1080"
+							  loading="lazy"
 							/>
 						  </picture>
 					</div>
@@ -155,6 +157,7 @@
 							  class="d-block w-100"
 							  width="1920"
 							  height="1080"
+							  loading="lazy"
 							/>
 						  </picture>
 					</div>
