--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 	<link rel="canonnial" href="https://terekdev.github.io/ninacarducci.github.io-main/">
 
 	<title>Nina Carducci photographe professionnelle située à Bordeaux</title>
-	<meta name="description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire." />
+	<meta name="description" content="Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. 
+	Des images authentiques et intemporelles qui racontent votre histoire." />
 </head>
 
 <body>
@@ -117,8 +118,6 @@
 							  src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp"
 							  alt="Bannière (photographie de concert)"
 							  class="d-block w-100"
-							  width="1920"
-							  height="1080"
 							  loading="lazy"
 							/>
 						  </picture>
@@ -136,8 +135,6 @@
 							  src="./assets/images/slider/1024/nicholas-green-concert.1024.webp"
 							  alt="Bannière (photographie de concert)"
 							  class="d-block w-100"
-							  width="1920"
-							  height="1080"
 							  loading="lazy"
 							/>
 						  </picture>
@@ -155,8 +152,6 @@
 							  src="./assets/images/slider/1024/edward-cisneros-mariage.1024.webp"
 							  alt="Bannière (photographie de concert)"
 							  class="d-block w-100"
-							  width="1920"
-							  height="1080"
 							  loading="lazy"
 							/>
 						  </picture>
