--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
 							<img
 								fetchpriority="low"
 							  src="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp"
-							  alt="Bannière (photographie de concert)"
+							  alt="Homme en costume Traversant un passage piétion"
 							  class="d-block w-100"
+							  width="1920"
+							  height="1080"
 							  loading="lazy"
 							/>
 						  </picture>
@@ -133,8 +135,10 @@
 							<img
 								fetchpriority="low"
 							  src="./assets/images/slider/1024/nicholas-green-concert.1024.webp"
-							  alt="Bannière (photographie de concert)"
+							  alt="Foule dans un concert"
 							  class="d-block w-100"
+							  width="1920"
+							  height="1080"
 							  loading="lazy"
 							/>
 						  </picture>
@@ -150,8 +154,10 @@
 							<img
 								fetchpriority="low"
 							  src="./assets/images/slider/1024/edward-cisneros-mariage.1024.webp"
-							  alt="Bannière (photographie de concert)"
+							  alt="Couple qui danse dans un balet"
 							  class="d-block w-100"
+							  width="1920"
+							  height="1080"
 							  loading="lazy"
 							/>
 						  </picture>
