--- a/index.html
+++ b/index.html
@@ -108,51 +108,22 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<picture>
-							<source srcset="./assets/images/slider/1024/ryoji-iwata-entreprise.1024.webp" media="(max-width: 1024px)" />
-							<source srcset="./assets/images/slider/375/ryoji-iwata-entreprise.375.webp" media="(max-width: 375px)" />
-							<source srcset="./assets/images/slider/768/ryoji-iwata-entreprise.768.webp" media="(max-width: 768px)" />
-							<img
-								fetchpriority="low"
-							  src="./assets/images/slider/768/ryoji-iwata-entreprise.768.webp"
-							  alt="Homme en costume Traversant un passage piétion"
-							  class="d-block w-100"
-							  width="1920"
-							  height="1080"
-							/>
-						  </picture>
+							<source media="(max-width: 650px)" srcset="./assets/images/sliders/ryoji-iwata-mobile.jpg">
+							<source media="(min-width: 2000px)" srcset="./assets/images/sliders/ryoji-iwata.jpg">
+							<img src="./assets/images/sliders/ryoji-iwata.jpg" class="d-block w-100"  alt="ryoji-iwata">
+						</picture>
 					</div>
-
 					<div class="carousel-item">
-						<picture>
-							<source srcset="./assets/images/slider/1024/nicholas-green-concert.1024.webp" media="(max-width: 1024px)" />
-							<source srcset="./assets/images/slider/375/nicholas-green-concert.375.webp" media="(max-width: 375px)" />
-							<source srcset="./assets/images/slider/768/nicholas-green-concert.768.webp" media="(max-width: 768px)" />
-							<img
-								fetchpriority="low"
-							  src="./assets/images/slider/768/nicholas-green-concert.768.webp"
-							  alt="Foule dans un concert"
-							  class="d-block w-100"
-							  width="1920"
-							  height="1080"
-							/>
-						  </picture>
+						<source media="(max-width: 650px)" srcset="./assets/images/sliders/nicolas-green-mobile.jpg">
+						<source media="(min-width: 2000px)" srcset="./assets/images/sliders/nicolas-green.jpg">
+						<img src="./assets/images/sliders/nicolas-green.jpg" class="d-block w-100" alt="nicolas-green">
 					</div>
-
 					<div class="carousel-item">
-						<picture>
-							<source srcset="./assets/images/slider/1024/edward-cisneros-mariage.1024.webp" media="(max-width: 1024px)" />
-							<source srcset="./assets/images/slider/375/edward-cisneros-mariage.375.webp" media="(max-width: 375px)" />
-							<source srcset="./assets/images/slider/768/edward-cisneros-mariage.768.webp" media="(max-width: 768px)" />
-							<img
-								fetchpriority="low"
-							  src="./assets/images/slider/768/edward-cisneros-mariage.768.webp"
-							  alt="Couple qui danse dans un balet"
-							  class="d-block w-100"
-							  width="1920"
-							  height="1080"
-							/>
-						  </picture>
+						<source media="(max-width: 650px)" srcset="./assets/images/sliders/edward-cisneros-mobile.jpg">
+						<source media="(min-width: 2000px)" srcset="./assets/images/sliders/edward-cisneros.jpg">
+						<img src="./assets/images/sliders/edward-cisneros.jpg" class="d-block w-100" alt="edward-cisneros">
 					</div>
+				</div>
 				</div>
 
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
