--- a/index.html
+++ b/index.html
@@ -108,20 +108,20 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<picture>
-							<source media="(max-width: 650px)" srcset="./assets/images/sliders/ryoji-iwata-mobile.jpg">
-							<source media="(min-width: 2000px)" srcset="./assets/images/sliders/ryoji-iwata.jpg">
-							<img src="./assets/images/sliders/ryoji-iwata.jpg" class="d-block w-100"  alt="ryoji-iwata">
+							<source media="(max-width: 375px)" srcset="./assets/image/sliders/edward-cisneros-mariage.375.webp">
+							<source media="(min-width: 1920px)" srcset="./assets/image/sliders/edward-cisneros-mariage.1920.webp">
+							<img src="./assets/images/sliders/edward-cisneros-mariage.1024.webp" class="d-block w-100"  alt="ryoji-iwata" width="1024" height="474">
 						</picture>
 					</div>
 					<div class="carousel-item">
-						<source media="(max-width: 650px)" srcset="./assets/images/sliders/nicolas-green-mobile.jpg">
-						<source media="(min-width: 2000px)" srcset="./assets/images/sliders/nicolas-green.jpg">
-						<img src="./assets/images/sliders/nicolas-green.jpg" class="d-block w-100" alt="nicolas-green">
+						<source media="(max-width: 375px)" srcset="./assets/images/slider/nicholas-green-concert.375.webp">
+						<source media="(min-width: 1920px)" srcset="./assets/images/slider/nicholas-green-concert.1920.webp">
+						<img src="./assets/images/sliders/nicholas-green-concert.1024.webp" class="d-block w-100" alt="nicolas-green" width="1024" height="474">
 					</div>
 					<div class="carousel-item">
-						<source media="(max-width: 650px)" srcset="./assets/images/sliders/edward-cisneros-mobile.jpg">
-						<source media="(min-width: 2000px)" srcset="./assets/images/sliders/edward-cisneros.jpg">
-						<img src="./assets/images/sliders/edward-cisneros.jpg" class="d-block w-100" alt="edward-cisneros">
+						<source media="(max-width: 375px)" srcset="./assets/images/slider/ryoji-iwata-entreprise.375.webp">
+						<source media="(min-width: 1920px)" srcset="./assets/images/slider/ryoji-iwata-entreprise.1920.webp">
+						<img src="./assets/images/sliders/ryoji-iwata-entreprise.1024.webp" class="d-block w-100" alt="edward-cisneros" width="1024" height="474">
 					</div>
 				</div>
 				</div>
