--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@
 						<picture>
 							<source media="(max-width: 375px)" srcset="./assets/image/sliders/edward-cisneros-mariage.375.webp">
 							<source media="(min-width: 1920px)" srcset="./assets/image/sliders/edward-cisneros-mariage.1920.webp">
-							<img src="./assets/images/slider/edward-cisneros-mariage.1024.webp" class="d-block w-100"  alt="ryoji-iwata" width="1024" height="474">
+							<img src="./assets/images/slider/edward-cisneros-mariage.1024.webp" class="d-block w-100"  alt="Couple qui danse dans un balet" width="1024" height="474">
 						</picture>
 					</div>
 					<div class="carousel-item">
 						<source media="(max-width: 375px)" srcset="./assets/images/slider/nicholas-green-concert.375.webp">
 						<source media="(min-width: 1920px)" srcset="./assets/images/slider/nicholas-green-concert.1920.webp">
-						<img src="./assets/images/slider/nicholas-green-concert.1024.webp" class="d-block w-100" alt="nicolas-green" width="1024" height="474">
+						<img src="./assets/images/slider/nicholas-green-concert.1024.webp" class="d-block w-100" alt="Foule dans un concert" width="1024" height="474">
 					</div>
 					<div class="carousel-item">
 						<source media="(max-width: 375px)" srcset="./assets/images/slider/ryoji-iwata-entreprise.375.webp">
 						<source media="(min-width: 1920px)" srcset="./assets/images/slider/ryoji-iwata-entreprise.1920.webp">
-						<img src="./assets/images/slider/ryoji-iwata-entreprise.1024.webp" class="d-block w-100" alt="edward-cisneros" width="1024" height="474">
+						<img src="./assets/images/slider/ryoji-iwata-entreprise.1024.webp" class="d-block w-100" alt="Homme en costume Traversant un passage piétion" width="1024" height="474">
 					</div>
 				</div>
 				</div>
