--- a/index.html
+++ b/index.html
@@ -107,21 +107,45 @@
 
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<picture>
-							<source media="(max-width: 1440px)" srcset="./assets/image/sliders/edward-cisneros-mariage.1440.webp">
-							<source media="(min-width: 375px)" srcset="./assets/image/sliders/edward-cisneros-mariage.375.webp">
-							<img src="./assets/images/slider/edward-cisneros-mariage.1024.webp" class="d-block w-100"  alt="Couple qui danse dans un balet" width="1024" height="474">
-						</picture>
+					<picture>
+						<source srcset="./assets/images/slider/375/nicholas-green-concert.webp" media="(max-width: 480px)" />
+						<source srcset="./assets/images/slider/1024/nicholas-green-concert.webp" media="(max-width: 1000px)" />
+						<img
+						  src="./assets/images/slider/1440/nicholas-green-concert.webp"
+						  alt="Bannière (photographie de concert)"
+						  class="d-block w-100"
+						  width="1920"
+						  height="1080"
+						/>
+					  </picture>
 					</div>
 					<div class="carousel-item">
-						<source media="(max-width: 1440px)" srcset="./assets/images/slider/nicholas-green-concert.1440.webp">
-						<source media="(min-width: 375px)" srcset="./assets/images/slider/nicholas-green-concert.375.webp">
-						<img src="./assets/images/slider/nicholas-green-concert.1024.webp" class="d-block w-100" alt="Foule dans un concert" width="1024" height="474">
+					  <picture>
+						<source srcset="./assets/images/slider/375/edward-cisneros-mariage.webp" media="(max-width: 480px)" />
+						<source srcset="./assets/images/slider/1024/edward-cisneros-mariage.webp" media="(max-width: 1000px)" />
+						<img
+						  src="./assets/images/slider/1440/edward-cisneros-mariage.webp"
+						  alt="Bannière (photographie de mariage)"
+						  class="d-block w-100"
+						  width="1920"
+						  height="1080"
+						  loading="lazy"
+						/>
+					  </picture>
 					</div>
 					<div class="carousel-item">
-						<source media="(max-width: 1440px)" srcset="./assets/images/slider/ryoji-iwata-entreprise.1440.webp">
-						<source media="(min-width: 375px)" srcset="./assets/images/slider/ryoji-iwata-entreprise.375.webp">
-						<img src="./assets/images/slider/ryoji-iwata-entreprise.1024.webp" class="d-block w-100" alt="Homme en costume Traversant un passage piétion" width="1024" height="474">
+					  <picture>
+						<source srcset="./assets/images/slider/375/ryoji-iwata-entreprise.webp" media="(max-width: 480px)" />
+						<source srcset="./assets/images/slider/1024/ryoji-iwata-entreprise.webp" media="(max-width: 1000px)" />
+						<img
+						  src="./assets/images/slider/1440/ryoji-iwata-entreprise.webp"
+						  alt="Bannière (photographie d'entreprise)"
+						  class="d-block w-100"
+						  width="1920"
+						  height="1080"
+						  loading="lazy"
+						/>
+					  </picture>
 					</div>
 				</div>
 				</div>
